<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.zezeno</groupId>
	<artifactId>zeze-java</artifactId>
	<version>1.0.8-SNAPSHOT</version>

	<name>zeze-java</name>
	<url>https://github.com/e2wugui/zeze</url>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/e2wugui/zeze</url>
	</scm>

	<distributionManagement>
		<repository>
			<id>releases</id>
			<url>http://10.12.7.230:9081/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<url>http://10.12.7.230:9081/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<!--
						<goals>
							<goal>jar</goal>
						</goals>
						-->
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<debuglevel>source,lines,vars</debuglevel>
					<parameters>true</parameters>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.rsa=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.util=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<log4j-api.version>2.18.0</log4j-api.version>
		<log4j-core.version>2.18.0</log4j-core.version>
		<annotations.version>23.0.0</annotations.version>
		<pcollectons.version>3.1.4</pcollectons.version>
		<rocksdbjni.version>7.4.3</rocksdbjni.version>
		<netty.version>4.1.80.Final</netty.version>
		<tikv.version>3.3.0</tikv.version>
		<commons-dbcp2.version>2.9.0</commons-dbcp2.version>
		<mysql-conncetor-java.version>8.0.30</mysql-conncetor-java.version>
		<rocketmq-client.version>4.9.4</rocketmq-client.version>
		<javaee-api.version>8.0.1</javaee-api.version>
		<junit.version>4.13.2</junit.version>
	</properties>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j-api.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j-core.version}</version>
		</dependency>

		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>${annotations.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.pcollections/pcollections -->
		<dependency>
			<groupId>org.pcollections</groupId>
			<artifactId>pcollections</artifactId>
			<version>${pcollectons.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.rocksdb/rocksdbjni -->
		<dependency>
			<groupId>org.rocksdb</groupId>
			<artifactId>rocksdbjni</artifactId>
			<version>${rocksdbjni.version}</version>
		</dependency>

		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-codec-http</artifactId>
			<version>${netty.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-transport-native-epoll</artifactId>
			<version>${netty.version}</version>
			<classifier>linux-x86_64</classifier>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.tikv/tikv-client-java -->
		<dependency>
			<groupId>org.tikv</groupId>
			<artifactId>tikv-client-java</artifactId>
			<version>${tikv.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-dbcp2</artifactId>
			<version>${commons-dbcp2.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql-conncetor-java.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.rocketmq</groupId>
			<artifactId>rocketmq-client</artifactId>
			<version>${rocketmq-client.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>${javaee-api.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
